src/test/ui/async-await/issue-64130-2-send.stderr
error: future cannot be sent between threads safely
  --> $DIR/issue-64130-2-send.rs:21:13
   |
LL |     is_send(bar());
   |             ^^^^^ future returned by `bar` is not `Send`
   |
   = help: within `impl Future<Output = ()>`, the trait `Send` is not implemented for `Foo`
note: future is not `Send` as this value is used across an await
  --> $DIR/issue-64130-2-send.rs:15:10
   |
LL |     let x = Foo;
   |         - has type `Foo` which is not `Send`
LL |     baz().await;
   |          ^^^^^^ await occurs here, with `x` maybe used later
LL | }
   | - `x` is later dropped here
note: required by a bound in `is_send`
  --> $DIR/issue-64130-2-send.rs:11:15
   |
LL | fn is_send<T: Send>(t: T) { }
   |               ^^^^ required by this bound in `is_send`

error: aborting due to previous error

